# genjax

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEVELOPING.md  README.md  README_pypi.md  SECURITY.md  Untitled.ipynb  codecov.yml  mkdocs.yml  noxfile.py  poetry.toml  pyproject.toml  requirements.txt
.devcontainer/: post-create.sh
.devcontainer/base/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: access.md  bug_report.md  design-refactor.md  documentation-issue.md  genjax-extension-proposal.md
.github/workflows/: ci-nightly.yml  ci.yml  coverage.yml  dependabot-approve-and-auto-merge.yml  docs.yml  labeler.yml  mypy.yml  notebooks.yml  pre-commit.yml  pyright.yml  release.yml  ruff.yml  safety.yml  static.yml  test_docs.yml
docs/: CNAME  autodigenjax.md  conf.py  contributing.md  cookbook.md  developing.md  index.md  index.rst  language_aperitifs.md  license.md  notebooks.md
docs/assets/pptx/: genjax_logo_small.pptx
docs/cookbook/: index.md
docs/cookbook/active/: choice_maps.ipynb  debugging.ipynb  generative_function_interface.ipynb  intro.ipynb  jax_basics.ipynb
docs/cookbook/inactive/: generative_fun.ipynb
docs/css/: custom.css  fonts.css  mkdocstrings.css
docs/js/: mathjax.js
docs/sharp-edges-notebooks/: basic_methods_generative.ipynb  conditionals_mixtures.ipynb  dynamic_computation.ipynb  generative_fun.ipynb
docs/sharp-edges-notebooks/basics/: generative_fun.ipynb  methods_of_generative_fun.ipynb  saving_traces.ipynb  some_oddities.ipynb
docs/sharp-edges-notebooks/expressivity/: conditionals_mixtures.ipynb  iterating_computation.ipynb
docs/sharp-edges-notebooks/inference/: basic_importance_sampling.ipynb
notebooks/: _quarto.yml  basics.qmd  custom.css  custom.scss  differentiation.qmd  expressivity.qmd  index.ipynb  index.qmd  inference.qmd  inference_libraries.ipynb  inference_libraries.qmd  intro.ipynb  intro.qmd  jax_primer.ipynb  library_author.qmd  speed.qmd  variance_reduction.qmd
notebooks/active/: combinators.ipynb  inference_libraries.ipynb  intro.ipynb
notebooks/adev/: adev_reverse.ipynb
notebooks/cookbook/basics/: choicemap_creation_selection.ipynb  debugging.ipynb  generative_fun.ipynb  methods_of_generative_fun.ipynb  saving_traces.ipynb  some_oddities.ipynb
notebooks/cookbook/differentiation/: adev_demo.ipynb  adev_demo.py  adev_example.ipynb  adev_example.py
notebooks/cookbook/expressivity/: conditionals.ipynb  custom_distribution.ipynb  dynamic_computation.ipynb  iterating_computation.ipynb  masking.ipynb  mixture.ipynb  ravi_stack.ipynb  scratch.ipynb  stochastic_probabilities.ipynb
notebooks/cookbook/inference/: custom_proposal.ipynb  importance_sampling.ipynb  mcmc.ipynb
notebooks/cookbook/library_author/: compose_combinator.ipynb  dimap_combinator.ipynb
src/genjax/: __init__.py  adev.py  assistant.py  console.py  core.py  coryx.py  debugger.py  dippl.py  experimental.py  extras.py  gensp.py  global_options.py  grasp.py  incremental.py  inference.py  information.py  interface.py  interpreted.py  language_decorator.py  learning.py  mytest.py  nablasp.py  pretty.py  prox.py  serialization.py  shortcuts.py  test.py  time_travel.py  typing.py
src/genjax/_src/: __init__.py  assistant.py  checkify.py  console.py  global_options.py  interface.py  language_decorator.py  shortcuts.py  utilities.py
src/genjax/builtin/: builtin_datatypes.py  builtin_gen_fn.py  builtin_tracetype.py  handlers.py
src/genjax/combinators/: __init__.py  combinator_datatypes.py  map_combinator.py  switch_combinator.py  unfold_combinator.py
src/genjax/core/: __init__.py  callback.py  choice_tree.py  datatypes.py  diff_rules.py  exceptions.py  (+18 more)
tests/: _test_switch.py  test_importance.py  test_simulate.py  test_switch.py  test_update.py
tests/adev/: test_adev.py
tests/core/: test_choice_map.py  test_choice_maps.py  test_diff.py  test_hashabledict.py  test_pythonic.py  test_pytree.py  test_selection.py  test_selections.py  test_serialize.py  test_shortcuts.py  test_staging.py
tests/experimental/: test_closure_convert.py
tests/generative_functions/: test_dimap_combinator.py  test_distributions.py  test_drop_arguments.py  test_interpreted_language.py  test_map_combinator.py  test_mask_combinator.py  test_mix_combinator.py  test_or_else.py  test_repeat_combinator.py  test_scan_combinator.py  test_static_gen_fn.py  test_static_language.py  test_switch_combinator.py  test_unfold_combinator.py  test_vector_datatypes.py  test_vmap_combinator.py
tests/inference/: smc.py  test_requests.py  test_smc.py  test_translators.py  test_vi.py
tests/misc/: test_404.py  test_serialize.py
(+483 files in other folders)
