[tool.poetry]
name = "genjax"
version = "0.0.1"
description="Gen ⊗ JAX"
authors = ["McCoy R. Becker <mccoyb@mit.edu>, MIT Probabilistic Computing Project <probcomp-assist@csail.mit.edu>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
jax = "^0.3.15"
jaxlib = "^0.3.15"
numpy = "^1.23.2"
tensorflow-probability = "^0.18.0"
blackjax = "^0.9.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
optax = "^0.1.3"
black = "^22.6.0"
pytest = "^7.1.2"
coverage = "^6.4.3"
flake8 = "^5.0.4"
flake8-bugbear = "^22.7.1"
mypy = "^0.971"
pre-commit = "^2.20.0"
pytest-benchmark = "^3.4.1"
autoflake8 = "^0.3.2"
Sphinx = "^5.1.1"
jupyter-sphinx = "^0.4.0"
sphinx-autobuild = "^2021.3.14"

[tool.black]
line-length = 80
extend-exclude = '''
/(
  experiments
)/
'''

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
