[tool.poetry]
name = "genjax"
version = "0.0.1"
description = "Gen ⊗ JAX"
authors = [
  "McCoy R. Becker <mccoyb@mit.edu>, MIT Probabilistic Computing Project <probcomp-assist@csail.mit.edu>",
]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/probcomp/genjax"
repository = "https://github.com/probcomp/genjax"
documentation = "https://probcomp.github.io/genjax/"
classifiers = ["Development Status :: 4 - Beta"]

[tool.poetry.urls]
Changelog = "https://github.com/probcomp/genjax/releases"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
jax = "^0.3.23"
jaxlib = "^0.3.22"
numpy = "^1.23.4"
tensorflow-probability = "^0.18.0"
optax = "^0.1.3"
blackjax = "^0.9.6"
rich = "^12.6.0"
tinygp = "^0.2.2"
tree-math = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
coverage = "^6.5.0"
mypy = "^0.982"
pytest-benchmark = "^4.0.0"
autoflake8 = "^0.4.0"
sphinx = ">=3,<5"
jupyter-sphinx = "^0.4.0"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.5.0"
isort = "^5.10.1"
xdoctest = "^1.1.0"
safety = "^2.3.1"
darglint = "^1.8.1"
furo = "^2022.9.29"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
show_missing = true
fail_under = 45

[tool.black]
line-length = 79
extend-exclude = '''
/(
  experiments
)/
'''

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
